--- a/parte_dos/docker-compose.yaml
+++ b/parte_dos/docker-compose.yaml
@@ -9,6 +9,33 @@ services:
       POSTGRES_DB: login_api
     volumes: 
     - postgres-data:/var/lib/postgresql/data
+  go-api:
+    build:
+      context: ./go-api
+      dockerfile: Dockerfile
+    depends_on:
+      - db
+    environment:
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_USER: postgres
+      DB_PASSWORD: 1234
+      DB_NAME: login_api
+    ports:
+      - "8080:8080"
+
+  react-app:
+    container_name: react-app
+    build:
+      context: ./front
+      dockerfile: Dockerfile
+    ports:
+      - "5173:5173"
+    volumes:
+      - ./front:/app:delegated
+      - /app/node_modules       
+    environment:
+      - NODE_ENV=development
   
 volumes:
   postgres-data:
