--- a/parte_uno/docker-compose.yml
+++ b/parte_uno/docker-compose.yml
@@ -3,7 +3,8 @@ services:
     platform: linux/amd64
     build:
       context: .
-      dockerfile: Dockerfile  
+      #dockerfile: Dockerfile 
+      dockerfile: extra.Dockerfile   
     container_name: godot-container
     ports:
       - "5000:5000"
