--- a/parte_dos/docker-compose.yaml
+++ b/parte_dos/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
       POSTGRES_DB: login_api
     volumes: 
     - postgres-data:/var/lib/postgresql/data
+
   go-api:
     build:
       context: ./go-api
@@ -25,7 +26,6 @@ services:
       - "8080:8080"
 
   react-app:
-    container_name: react-app
     build:
       context: ./front
       dockerfile: Dockerfile
@@ -35,7 +35,7 @@ services:
       - ./front:/app:delegated
       - /app/node_modules       
     environment:
-      - NODE_ENV=development
+      NODE_ENV: development
   
 volumes:
   postgres-data:
